# project/routes/teams.js
@@ -1,30 +1,36 @@
 var express = require("express");
 var router = express.Router();
-const DButils = require("./utils/DButils");
+const teams_utils = require("./utils/teams_utils");
 const players_utils = require("./utils/players_utils");
 let teamID;
 
-router.get("/teamFullDetails/:teamId", async (req, res, next) => {
-  let team_details = [];
-  teamID = req.params.teamId;
-  try {
-    const players_details = await players_utils.getPlayersByTeam(teamID);
-    team_details.push(players_details);
-    //we should keep implementing team page.....
+function extend(target) {
+  var sources = [].slice.call(arguments, 1);
+  sources.forEach(function (source) {
+      for (var prop in source) {
+          target[prop] = source[prop];
+      }
+  });
+  return target;
+}
 
-    past_home_team_games = await DButils.execQuery(`SELECT * FROM dbo.games WHERE hometeamID = ${teamID} AND score IS NOT NULL`);
-    past_away_team_games = await DButils.execQuery(`SELECT * FROM dbo.games WHERE awayteamID = ${teamID} AND score IS NOT NULL`);
-    future_home_team_games = await DButils.execQuery(`SELECT * FROM dbo.games WHERE hometeamID = ${teamID} AND score IS NULL`);
-    future_away_team_games = await DButils.execQuery(`SELECT * FROM dbo.games WHERE awayteamID = ${teamID} AND score IS NULL`);
-    team_details.push(past_home_team_games);
-    team_details.push(past_away_team_games);
-    team_details.push(future_home_team_games);
-    team_details.push(future_away_team_games);
+router.get("/teamFullDetails/:teamId", async (req, res, next) => {
+  teamID = req.params.teamId;
+  team_details = [];
+  try {
+    const team_players_details = await players_utils.getPlayersByTeam(teamID);
+    const team_games_details = await teams_utils.getTeamDetails(teamID);
+
+    let full_details = extend({}, team_games_details, team_players_details);
+    team_details.push(full_details);
 
     res.status(200).send(team_details);
+    
+  
   } catch (error) {
     next(error);
   }
 });
+
 
 module.exports = router;
