# project/routes/utils/users_utils.js
@@ -1,5 +1,6 @@
 const DButils = require("./DButils");
 
+
 async function markAsFavorite(table, user_id, id) {
   await DButils.execQuery(
     `insert into ${table} values ('${user_id}',${id})`
@@ -7,10 +8,11 @@ async function markAsFavorite(table, user_id, id) {
 }
 
 async function getFavorite(table, user_id) {
-  const player_ids = await DButils.execQuery(
-    `select top 3 playerid from ${table} where userid='${user_id}'`
+  const x = `select top 3 ${table}id from favorite${table}s where userid=${user_id}`;
+  const ids = await DButils.execQuery(
+    `select top 3 ${table}id from favorite${table}s where userid=${user_id}`
   );
-  return player_ids;
+  return ids;
 }
 
 async function getFavoritegameDetails(game_id) {
